--- a/Activity_1_Joseph_Emmanuel/css/Tic-Tac-Toe.css
+++ b/Activity_1_Joseph_Emmanuel/css/Tic-Tac-Toe.css
@@ -1,50 +1,59 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 body {
-    height: 100vh;
-    display: flex;
-    background: greenyellow;
+  height: 100vh;
+  display: flex;
+  background: g;
 }
 #gameBoard {
-    width: 300px;
-    height: 300px;
-    margin: auto;
-    margin-left: 100px;
-    display: flex;
-    flex-wrap: wrap;
-    perspective: 1000px;
+  width: 300px;
+  height: 300px;
+  margin: auto;
+  margin-left: 100px;
+  display: flex;
+  flex-wrap: wrap;
+  perspective: 1000px;
 }
 .card {
-    width: calc(33% - 10px);
-    height: calc(33% - 10px);
-    margin: 5px;
-    position: relative;
-    transform: scale(1);
-    transform-style: preserve-3d;
-    transition: transform 0.5s;
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
-    background-color: aliceblue ;
+  width: calc(33% - 10px);
+  height: calc(33% - 10px);
+  margin: 5px;
+  background-color: beige;
 }
 
-#chooseSymbol{
-    width: 300px;
-    height: 300px;
-    margin: auto;margin-right: 10px;
-    margin-left: 300px;
-    display: flex;
-    flex-wrap: wrap;
-    perspective: 1000px;
+#chooseSymbol {
+  width: 300px;
+  height: 300px;
+  margin: auto;
+  margin-right: 10px;
+  margin-left: 300px;
+  display: flex;
+  flex-wrap: wrap;
+  perspective: 1000px;
 }
-#chooseSymbol>button{
-    width: 100px;
-    height: 100px;
-    margin-right: 50px;
+#chooseSymbol > button {
+  width: 100px;
+  height: 100px;
+  margin-right: 50px;
+  background-color: beige;
 }
-h1{
-    align-content: center;
-    margin: 50px;
-    margin-right:50px ;
+h1 {
+  align-content: center;
+  margin: 50px;
+  margin-right: 50px;
+}
+/* #chooseSymbol > button:focus {
+  background-color: yellow;
+} */
+.disabled {
+  /* opacity: 0.6; */
+  cursor: not-allowed;
+  border-radius: 50%;
+  background-color: aqua;
+}
+p {
+  align-content: center;
 }
